--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Ultimate Campout</title>
   <meta charset = "UTF-8" />
+  <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6961376/7346172/css/fonts.css" />
+  <link rel="stylesheet" type="text/css" href="styles/styles.css" />
 </head>
 <body>
   <h1>Ultimate Campout</h1>
