Adds javascript to get random images

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
   <h1>Ultimate Campout</h1>
   <iframe class="contest-iframe" frameborder="0" width="100%" id="requestCatFrame" name="requestCatFrame" scrolling="no" src="https://ibex.com/forms/ultimatecampout-form.ibx"></iframe>
+
+  <div id="photo-tiles"></div>
+
+  <script src="app.js"></script>
 </body>
 </html>
