Adds boostrap and some styles

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
   <title>Ultimate Campout</title>
   <meta charset = "UTF-8" />
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6961376/7346172/css/fonts.css" />
+  <link rel="stylesheet" type="text/css" href="styles/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="styles/bootstrap-theme.css" />
   <link rel="stylesheet" type="text/css" href="styles/styles.css" />
 </head>
 <body>
-  <h1>Ultimate Campout</h1>
-  <iframe class="contest-iframe" frameborder="0" width="100%" id="requestCatFrame" name="requestCatFrame" scrolling="no" src="https://ibex.com/forms/ultimatecampout-form.ibx"></iframe>
+  <div class="container">
+    <h1 class="page-title">Ultimate Campout</h1>
+    <iframe class="contest-iframe" frameborder="0" width="100%" id="requestCatFrame" name="requestCatFrame" scrolling="no" src="https://ibex.com/forms/ultimatecampout-form.ibx"></iframe>
 
-  <div id="photo-tiles"></div>
+    <div class="row">
+      <div id="photo-tiles"></div>
+    </div>
+  </div>
 
   <script src="app.js"></script>
 </body>
