Adds sponsor logos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,46 @@
     <iframe class="contest-iframe" frameborder="0" width="100%" id="requestCatFrame" name="requestCatFrame" scrolling="no" src="https://ibex.com/forms/ultimatecampout-form.ibx"></iframe>
 
     <div class="row">
-      <div id="photo-tiles"></div>
+      <h2 class="page-title">#ultimatecampout</h2>
+      <div id="photo-tiles" class="photo-tiles"></div>
+    </div>
+
+    <div class="row logos">
+      <div class='logo col-xs-4 col-sm-2 col-md-2'>
+        <a href="https://demerbox.com/" target="_blank">
+          <img src="http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/logos/DemerBox.jpg" alt="DemerBox Logo"/>
+        </a>
+      </div>
+      <div class='logo col-xs-4 col-sm-2 col-md-1'>
+        <a href="https://goodto-go.com/" target="_blank">
+          <img src="http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/logos/Good-To-Go-Logo.jpg" alt="Good To Go Logo"/>
+        </a>
+      </div>
+      <div class='logo col-xs-4 col-sm-2 col-md-2'>
+        <a href="https://www.msrgear.com/" target="_blank">
+          <img src="http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/logos/msr.jpg" alt="MSR Logo"/>
+        </a>
+      </div>
+      <div class='logo col-xs-4 col-sm-2 col-md-2'>
+        <a href="http://www.nemoequipment.com/" target="_blank">
+          <img src="http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/logos/nemo.jpg" alt="Nemo Logo"/>
+        </a>
+      </div>
+      <div class='logo col-xs-4 col-sm-2 col-md-1'>
+        <a href="http://theprobar.com/" target="_blank">
+          <img src="http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/logos/probar.jpg" alt="ProBar Logo"/>
+        </a>
+      </div>
+      <div class='logo col-xs-4 col-sm-2 col-md-2'>
+        <a href="http://www.rovrproducts.com/" target="_blank">
+          <img src="http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/logos/rovr_logo.jpg" alt="ROVR Logo"/>
+        </a>
+      </div>
+      <div class='logo col-xs-4 col-sm-2 col-md-1'>
+        <a href="http://www.ruffwear.com/" target="_blank">
+          <img src="http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/logos/Ruffwear.jpg" alt="Ruffwear Logo"/>
+        </a>
+      </div>
     </div>
   </div>
 
