Adds styles for iFrame

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
   <div class="container">
     <h1 class="page-title">Ultimate Campout</h1>
-    <iframe class="contest-iframe" frameborder="0" width="100%" id="requestCatFrame" name="requestCatFrame" scrolling="no" src="https://ibex.com/forms/ultimatecampout-form.ibx"></iframe>
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
+        <iframe class="contest-iframe" frameborder="0" id="requestCatFrame" width="100%" name="requestCatFrame" scrolling="no" src="https://ibex.com/forms/ultimatecampout-form.ibx"></iframe>
+      </div>
+    </div>
 
     <div class="row">
       <h2 class="page-title">#ultimatecampout</h2>
